--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,3 +10,11 @@ body {
     margin-left: auto;
     margin-right: auto
 }
+.Photo1{
+    width: 1119px;
+    height: 438px;
+    display: block;
+    margin-left: auto;
+    margin-top: 5%;
+    margin-right: auto
+}
