--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
 <div class="base"></div>
-<img src="../styles/images/Photo.png" class="Photo1">
+<img src="../styles/images/Photo.png" class="Photo1" alt="First image">
 </body>
 </html>
