--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,6 @@
 body {
+    width: 1440px;
+    height: 9131px;
     background-color: #eaeaea;
 }
 .base {
@@ -10,9 +12,57 @@ body {
     margin-left: auto;
     margin-right: auto
 }
+.block1 {
+    position: relative;
+    margin-top: 85px ;
+    text-align: center;
+}
 .Photo1{
     width: 1119px;
     height: 438px;
-    display: block;
-    margin: 5% auto auto;
+    position: relative;
+
+}
+.Logo1 {
+    width: 252px;
+    height: 105px;
+    position: absolute;
+    top: 50px;
+    left: 245px;
+}
+.text1 {
+    position: absolute;
+    width: 355px;
+    height: 20px;
+    color: #921026;
+    font-family: "Playfair Display";
+    font-size: 24px;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: normal;
+    text-align: left;
+    font-style: normal;
+    letter-spacing: 0.6px;
+    line-height: normal;
+    top: 190px;
+    left: 245px;
+}
+.text2 {
+    position: absolute;
+    width: 312px;
+    height: 90px;
+    color: #000000;
+    font-family: "Josefin Sans";
+    font-size: 16px;
+    font-weight: 300;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: normal;
+    text-align: left;
+    font-style: normal;
+    letter-spacing: 0.4px;
+    line-height: normal;
+    top: 240px;
+    left: 245px;
 }
