--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,8 @@
         <img src="../styles/images/Logo.png" class="Logo1" alt="Logo image">
         <span class="text1">Bananas Foster Ice Cream Cake</span>
         <span class="text2">If you're looking for decadence, look no further — you've found the Holy Grail of desserts. Honestly, this cake makes us wonder why Bananas Foster hasn't always been served on top of ice cream cake.</span>
+        <span class="text3">GET IT RECIPE</span>
+        <div class="border1"></div>
     </div>
 
 </body>
