--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="../styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@350&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -15,13 +18,26 @@
     </div>
 
     <div class="block1">
-        <img src="../styles/images/Photo.png" class="Photo1" alt="First image">
-        <img src="../styles/images/Logo.png" class="Logo1" alt="Logo image">
+        <img src="../styles/images/Photo1-1.png" class="Photo1-1">
+        <img src="../styles/images/Logo.png" class="Logo1">
         <span class="text1">Bananas Foster Ice Cream Cake</span>
         <span class="text2">If you're looking for decadence, look no further — you've found the Holy Grail of desserts. Honestly, this cake makes us wonder why Bananas Foster hasn't always been served on top of ice cream cake.</span>
         <span class="text3">GET IT RECIPE</span>
         <div class="border1"></div>
+        <div class="dot1-1"></div>
+        <div class="dot1-2"></div>
+        <div class="dot1-3"></div>
+        <div class="dot1-4"></div>
+        <div class="dot1-5"></div>
+    </div>
 
+    <div class="block2">
+        <img src="../styles/images/Photo2-1.png" class="Photo2-1">
+        <span class="text2-1">Raspberry & Cream Frozen Yogurt Pie</span>
+        <img src="../styles/images/Photo2-2.png" class="Photo2-2">
+        <span class="text2-2">Giant Ice Cream Sandwich</span>
+        <img src="../styles/images/Photo2-3.png" class="Photo2-3">
+        <span class="text2-3">Dark Chocolate Crunch Ice Cream Sandwich Cake</span>
     </div>
 
 </body>
