--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <span>--------------------------------------------------------------------------</span>
     <div class="base">
 
     </div>
@@ -39,6 +40,14 @@
         <img src="../styles/images/Photo2-3.png" class="Photo2-3">
         <span class="text2-3">Dark Chocolate Crunch Ice Cream Sandwich Cake</span>
     </div>
+
+    <span>--------------------------------------------------------------------------</span>
+
+    <span>--------------------------------------------------------------------------</span>
+
+    <span>--------------------------------------------------------------------------</span>
+
+    <span>--------------------------------------------------------------------------</span>
 
 </body>
 
