--- a/styles/styles.css
+++ b/styles/styles.css
@@ -187,4 +187,9 @@ body {
     left: 765px;
     position: absolute;
 }
-/* --------------------------------------------- */
+/* ====================IVAN PART============== */
+
+/* ======================ARTYOM===============*/
+
+/* ===================PASHASASHSHASHA============= */
+
