--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,9 @@
     </div>
 
     <h1>--------------------------------------------------------------------------------------------------------------------------------------</h1><br>
+    <div class="block6">
+
+    </div>
 
     <h1>--------------------------------------------------------------------------------------------------------------------------------------</h1><br>
 
