--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+<div class="DIMA">
     <div class="base">
 
     </div>
@@ -40,9 +41,22 @@
         <span class="text2-3">Dark Chocolate Crunch Ice Cream Sandwich Cake</span>
     </div>
 
+</div>
+
+<div class = "IVAN">
     <div class="block6">
 
     </div>
+</div>
+
+<div class = "ARTYOM">
+
+</div>
+
+<div class = "PASHA">
+
+</div>
+
 
 
 </body>
