--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,17 @@
 </div>
 
 <div class = "PASHA">
-
+    <div class="block15">
+        <span class="text15-1">Post a Comment</span>
+        <img src="../styles/images/Pavel/Photo15_2.png" class="Photo15-2">
+        <img src="../styles/images/Pavel/Photo15_1.png" class="Photo15-1">
+        <img src="../styles/images/Pavel/Photo15_3.png" class="Photo15-3">
+        <img src="../styles/images/Pavel/Photo15_4.png" class="Photo15-4">
+        <span class="text15-2">POST</span>
+        <span class="text15-3">Facebook</span>
+        <span class="text15-4">|</span>
+        <span class="text15-5">Twitter</span>
+    </div>
 </div>
 
 
