--- a/styles/styles.css
+++ b/styles/styles.css
@@ -201,4 +201,81 @@ body {
 /* ======================ARTYOM===============*/
 
 /* ===================PASHASASHSHASHA============= */
-
+.block15 {
+    width: 838px;
+    height: 187px;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.15);
+    left: 280px;
+    top: 4175px;
+    position: absolute;
+}
+.text15-1{
+    color: #000000;
+    font-family: "Josefin Sans";
+    font-size: 24px;
+    font-weight: 400;
+    font-style: italic;
+    letter-spacing: normal;
+    line-height: normal;
+    text-align: left;
+    left:40px;
+    top: 25px;
+    position: absolute;
+}
+.text15-2{
+    font-family: 'Josefin Sans';
+    font-size: 16px;
+    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: normal;
+    color: #ffffff;
+    top:100px;
+    left:705px;
+    position: absolute;
+}
+.Photo15-2{
+    top:65px;
+    left:40px;
+    opacity: 0.05;
+    position: absolute;
+}
+.Photo15-1{
+    top:80px;
+    left:60px;
+    position: absolute;
+}
+.Photo15-3{
+    height:39px;
+    top:90px;
+    left:180px;
+    border: 1px solid #c2c2c2;
+    position:absolute;
+}
+.Photo15-4{
+    top:90px;
+    left:680px;
+    position: absolute;
+}
+.text15-3, .text15-4, .text15-5{
+    font-family: 'Josefin Sans';
+    font-style: italic;
+    font-size: 16px;
+    line-height: 1.2;
+    font-weight: 400;
+    letter-spacing: normal;
+    color: #000000;
+    position: absolute;
+}
+.text15-3{
+    left:645px;
+    top:35px;
+}
+.text15-4{
+    left:725px;
+    top:35px;
+}
+.text15-5{
+    left:740px;
+    top:35px;
+}
