--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -10,6 +11,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@350&display=swap" rel="stylesheet">
+    <style>
+        a {
+            text-decoration: none;
+        }
+        a:hover {
+            color: #CE242B;
+            text-decoration: underline;
+        }
+    </style>
 </head>
 
 <body>
@@ -60,10 +70,13 @@
         <img src="../styles/images/Pavel/Photo15_1.png" class="Photo15-1">
         <img src="../styles/images/Pavel/Photo15_3.png" class="Photo15-3">
         <img src="../styles/images/Pavel/Photo15_4.png" class="Photo15-4">
-        <span class="text15-2">POST</span>
-        <span class="text15-3">Facebook</span>
+        <a href="#text15-2" class="text15-2">POST</a>
+        <a href="#text15-3" class="text15-3">Facebook</a>
+        <a href="#text15-5" class="text15-5">Twitter</a>
         <span class="text15-4">|</span>
-        <span class="text15-5">Twitter</span>
+        <!--<span class="text15-2">POST</span>-->
+        <!--<span class="text15-3"></span>
+        <span class="text15-5">Twitter</span>-->
     </div>
 </div>
 
