--- a/templates/index.html
+++ b/templates/index.html
@@ -71,8 +71,8 @@
         <img src="../styles/images/Pavel/Photo15_3.png" class="Photo15-3">
         <img src="../styles/images/Pavel/Photo15_4.png" class="Photo15-4">
         <a href="#text15-2" class="text15-2">POST</a>
-        <a href="#text15-3" class="text15-3">Facebook</a>
-        <a href="#text15-5" class="text15-5">Twitter</a>
+        <a href="https://www.facebook.com/" class="text15-3">Facebook</a>
+        <a href="https://www.twitter.com/" class="text15-5">Twitter</a>
         <span class="text15-4">|</span>
         <!--<span class="text15-2">POST</span>-->
         <!--<span class="text15-3"></span>
