--- a/templates/index.html
+++ b/templates/index.html
@@ -68,15 +68,12 @@
         <span class="text15-1">Post a Comment</span>
         <img src="../styles/images/Pavel/Photo15_2.png" class="Photo15-2">
         <img src="../styles/images/Pavel/Photo15_1.png" class="Photo15-1">
-        <img src="../styles/images/Pavel/Photo15_3.png" class="Photo15-3">
         <img src="../styles/images/Pavel/Photo15_4.png" class="Photo15-4">
         <a href="#text15-2" class="text15-2">POST</a>
         <a href="https://www.facebook.com/" class="text15-3">Facebook</a>
         <a href="https://www.twitter.com/" class="text15-5">Twitter</a>
         <span class="text15-4">|</span>
-        <!--<span class="text15-2">POST</span>-->
-        <!--<span class="text15-3"></span>
-        <span class="text15-5">Twitter</span>-->
+        <input type="text" class="Input15-1">
     </div>
 </div>
 
