--- a/templates/index.html
+++ b/templates/index.html
@@ -54,9 +54,9 @@
     <div class="block11">
         <span class="text first">Tags</span>
         <div class="line one"></div>
-        <span class="text11-1">#yummy   #sweet   #dinner   #lunch 
+        <span class="text11-1">#yummy   #sweet   #dinner   #lunch <br> <br>
 
-            #breakfast   #fresh   #tasty   #delish
+            #breakfast   #fresh   #tasty   #delish <br> <br>
             
             #delicious   #eating   #food</span>
     </div>
