--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
         <span class="text12-2">&#62;</span>
         <span class="text12-3">June 2017</span>
         <span class="text12-4"><ins>Su</ins>     <ins>Mo</ins>     <ins>Tu</ins>     <ins>We</ins>     <ins>Th</ins>     <ins>Fr</ins>     <ins>Sa</ins></span>
-        <img src="/styles/images/Artyom/calendar.png" alt="" class="calendar">
+        <img src="../styles/images/Artyom/calendar.png" alt="" class="calendar">
     </div>    
     <div class="block13">
         <span class="text third">Login</span>
