--- a/styles/styles.css
+++ b/styles/styles.css
@@ -201,6 +201,7 @@ body {
 /* ======================ARTYOM===============*/
 
 /* ===================PASHASASHSHASHA============= */
+/*--------------------------------------------------*/
 .block15 {
     width: 838px;
     height: 187px;
@@ -263,7 +264,6 @@ body {
     top:90px;
     left:680px;
     position: absolute;
-    /*border: 0.75px solid #c2c2c2;*/
 }
 .text15-3, .text15-4, .text15-5{
     font-family: 'Josefin Sans', sans-serif;
@@ -286,4 +286,150 @@ body {
 .text15-5{
     left:740px;
     top:35px;
+}
+/*--------------------------------------------------*/
+
+/*--------------------------------------------------*/
+.block17{
+    width: 838px;
+    height: 92px;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.15);
+    position: absolute;
+    top: 5215px;
+    left: 280px;
+}
+.text17-arrowleft, .text17-arrowright, .text17-1, .text17-2, .text17-3, .text17-4, .text17-5, .text17-6{
+    font-family: 'Josefin Sans';
+    font-size: 18px;
+    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: normal;
+    top: 40%;
+    color: #000000;
+    position: absolute;
+}
+.text17-arrowleft{
+    left: 270px;
+}
+.text17-1{
+    left: 310px;
+}
+.text17-2{
+    left: 350px;
+    color: #629494;
+}
+.text17-3{
+    left: 390px;
+}
+.text17-4{
+    left: 430px;
+}
+.text17-5{
+    left: 470px;
+}
+.text17-6{
+    left: 510px;
+}
+.text17-arrowright{
+    left: 550px;
+}
+/*--------------------------------------------------*/
+.block18{
+    width: 1120px;
+    height: 180px;
+    opacity: 0.8;
+    background-color: #000000;
+    box-shadow: 0px 3px 7px 0px rgba(11,12,12,0.14);
+    position: absolute;
+    top: 5460px;
+    left:150px;
+}
+.Logo_black{
+    position: absolute;
+    top: 40%;
+    left: 85px;
+}
+.text18-1, .text18-2, .text18-3, .text18-4, .text18-5, .text18-6{
+    opacity: 0.5;
+    font-family: 'Josefin Sans';
+    font-size: 12px;
+    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: normal;
+    color: #fefefe;
+    top:85px;
+    position: absolute;
+}
+.text18-1{
+    left:285px;
+}
+.text18-1:hover{
+    opacity:1;
+    color: rgb(236, 236, 236);
+}
+.text18-2{
+    left:345px;
+}
+.text18-2:hover{
+    opacity:1;
+    color: rgb(236, 236, 236);
+}
+.text18-3{
+    left:415px;
+}
+.text18-3:hover{
+    opacity:1;
+    color: rgb(236, 236, 236);
+}
+.text18-4{
+    left:545px;
+}
+.text18-4:hover{
+    opacity:1;
+    color: rgb(236, 236, 236);
+}
+.text18-5{
+    left:610px;
+}
+.text18-5:hover{
+    opacity:1;
+    color: rgb(236, 236, 236);
+}
+.text18-6{
+    left:835px;
+}
+.google18, .twitter18, .facebook18, .pinterest18 {
+    top:110px;
+    position: absolute;
+    color: #fefefe;
+    opacity: 0.3;
+}
+.google18{
+    left:970px;
+}
+.google18:hover{
+    opacity:1;
+    color: rgb(236, 236, 236);
+}
+.twitter18{
+    left:1005px;
+}
+.twitter18:hover{
+    opacity:1;
+    color: rgb(236, 236, 236);
+}
+.facebook18{
+    left:1035px;
+}
+.facebook18:hover{
+    opacity:1;
+    color: rgb(236, 236, 236);
+}
+.pinterest18{
+    left:1055px;
+}
+.pinterest18:hover{
+    opacity:1;
+    color: rgb(236, 236, 236);
 }
