--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@
             text-decoration: underline;
         }
     </style>
+    <script src="https://kit.fontawesome.com/0f5170a7ac.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -74,6 +75,33 @@
         <a href="https://www.twitter.com/" class="text15-5">Twitter</a>
         <span class="text15-4">|</span>
         <input type="text" class="Input15-1">
+    </div>
+    <div class="block16">
+
+
+    </div>
+    <div class="block17">
+        <a href="#text17-arrowleft" class="text17-arrowleft"><</a>
+        <a href="#text17-1" class="text17-1">1</a>
+        <a href="#text17-2" class="text17-2">2</a>
+        <a href="#text17-3" class="text17-3">3</a>
+        <a href="#text17-4" class="text17-4">4</a>
+        <a href="#text17-5" class="text17-5">5</a>
+        <a href="#text17-6" class="text17-6">6</a>
+        <a href="#text17-arrowright" class="text17-arrowright">></a>
+    </div>
+    <div class="block18">
+        <a href="index.html"><img src="../styles/images/Pavel/Logo_black.png" class="Logo_black"></a>;
+        <a href="index.html" class="text18-1">HOME</a>
+        <a href="#text18-2" class="text18-2">RECIPES</a>
+        <a href="#text18-3" class="text18-3">PHOTO GALLERIES</a>
+        <a href="#text18-4" class="text18-4">VIDEOS</a>
+        <a href="#text18-5" class="text18-5">ALL CATEGORIES</a>
+        <span class="text18-6">2016-2017 LEMON. ALL RIGHT RESERVED</span>
+        <a href="https://www.google.com/"><span class="google18"><i class="fab fa-google-plus-g"></i></span></a>
+        <a href="https://www.twitter.com/"><span class="twitter18"><i class="fa-brands fa-twitter"></i></span></a>
+        <a href="https://www.facebook.com/"><span class="facebook18"><i class="fa-brands fa-facebook-f"></i></span></a>
+        <a href="https://www.pinterest.com/"><span class="pinterest18"><i class="fa-brands fa-pinterest"></i></span></a>
     </div>
 </div>
 
