--- a/styles/styles.css
+++ b/styles/styles.css
@@ -212,7 +212,7 @@ body {
     color: #000000;
     font-family: "Josefin Sans";
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 500;
     font-style: normal;
     letter-spacing: normal;
     line-height: normal;
@@ -421,7 +421,7 @@ body {
 .login {
     width: 265px;
     height: 40px;
-    box-shadow: inset 1px 2px 7px rgba(11, 12, 12, 0.37);
+    box-shadow: inset 1px 2px 2px rgba(11, 12, 12, 0.37);
     border: 1px solid #c2c2c2;
     background-color: #ffffff;
     position: absolute;
@@ -528,7 +528,7 @@ input::placeholder {
     letter-spacing: 0.3px;
 }
 button:hover {
-    background-color: #e9dfdf;
+    background-color: #9fcfeb;
 }
 .text13-4 {
     width: 150px;
