--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@350&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+
     <style>
         a {
             text-decoration: none;
@@ -56,6 +64,18 @@
 
 <div class = "IVAN">
     <div class="block6">
+        <span class="text6-1"> Chi-Chi or Chichi </span>
+        <img src="../styles/images/Ivan/girl.png" alt="" class="photo6-1">
+        <img src="../styles/images/Ivan/line.png" alt="" class="line6-1">
+        <span class="text6-2">Recipe by</span>
+        <span class="text6-3">Smuckersreg Toppings</span>
+        <span class="text6-4"><i class="fa-clock"></i></span>
+        <span class="text6-5">15mins</span>
+        <span class="text6-6"><i class="fa-thin fa-comment"></i></span>
+        <span class="text6-7">12</span>
+        <span class="text6-8"><i class="fa-eye"></i></span>
+        <span class="text6-9">37</span>
+
 
     </div>
 </div>
