--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="https://kit.fontawesome.com/0f5170a7ac.js" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="../styles/fonts/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="../styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,11 +70,11 @@
         <img src="../styles/images/Ivan/line.png" alt="" class="line6-1">
         <span class="text6-2">Recipe by</span>
         <span class="text6-3">Smuckersreg Toppings</span>
-        <span class="text6-4"><i class="fa-clock"></i></span>
+        <span class="text6-4"><i class="fa fa-clock"></i></span>
         <span class="text6-5">15mins</span>
-        <span class="text6-6"><i class="fa-thin fa-comment"></i></span>
+        <span class="text6-6"><i class="fa fa-thin fa-comment"></i></span>
         <span class="text6-7">12</span>
-        <span class="text6-8"><i class="fa-eye"></i></span>
+        <span class="text6-8"><i class="fa fa-eye"></i></span>
         <span class="text6-9">37</span>
 
 
