--- a/templates/index.html
+++ b/templates/index.html
@@ -77,9 +77,7 @@
         <span class="text6-7">12</span>
         <span class="text6-8"><i class="fa fa-eye"></i></span>
         <span class="text6-9">37</span>
-
-
-    </div>
+        <div class="line6-2"></div>
 </div>
 
 <div class = "ARTYOM">
