--- a/templates/index.html
+++ b/templates/index.html
@@ -67,8 +67,8 @@
 <div class = "IVAN">
     <div class="block6">
         <span class="text6-1"> Chi-Chi or Chichi </span>
-        <img src="../styles/images/Ivan/girl.png" alt="" class="photo6-1">
-        <img src="../styles/images/Ivan/line.png" alt="" class="line6-1">
+        <img src="../styles/images/Ivan/girl.png" class="photo6-1">
+        <img src="../styles/images/Ivan/line.png" class="line6-1">
         <span class="text6-2">Recipe by</span>
         <span class="text6-3">Smuckersreg Toppings</span>
         <span class="text6-4"><i class="fa fa-clock"></i></span>
@@ -78,8 +78,26 @@
         <span class="text6-8"><i class="fa fa-eye"></i></span>
         <span class="text6-9">37</span>
         <div class="line6-2"></div>
+        <img src="../styles/images/Ivan/food.png" class="photo6-2">
+        <div class="dot6-1"></div>
+        <div class="dot6-2"></div>
+        <div class="dot6-3"></div>
+        <div class="dot6-4"></div>
+        <div class="dot6-5"></div>
 </div>
-
+    <div class="block7">
+        <span class="text7-1">Recipe</span>
+        <img src="../styles/images/Ivan/line.png" class="line7-1">
+        <span class="text7-2">easy</span>
+        <span class="text7-3">middle</span>
+        <span class="text7-4">long</span>
+        <img src="../styles/images/Ivan/salat.png" class="photo7-1" >
+        <img src="../styles/images/Ivan/cocos.png" class="photo7-2" >
+        <img src="../styles/images/Ivan/hands.png" class="photo7-3" >
+        <form action="#viewbutton">
+            <input type="submit" value="VIEW MORE" class="viewbutton">
+        </form>
+    </div>
 <div class = "ARTYOM">
     <div class="block11">
         <span class="text first">Tags</span>
