--- a/templates/index.html
+++ b/templates/index.html
@@ -94,10 +94,9 @@
         <img src="../styles/images/Ivan/salat.png" class="photo7-1" >
         <img src="../styles/images/Ivan/cocos.png" class="photo7-2" >
         <img src="../styles/images/Ivan/hands.png" class="photo7-3" >
-        <form action="#viewbutton">
-            <input type="submit" value="VIEW MORE" class="viewbutton">
-        </form>
+        <button class="viewbutton">VIEW MORE</button>
     </div>
+</div>
 <div class = "ARTYOM">
     <div class="block11">
         <span class="text first">Tags</span>
@@ -123,7 +122,6 @@
         <span class="text13-1">Login for LEMON</span>
         <input type="text" class="login" placeholder="email or login">
         <input type="text" class="password" placeholder="password">
-        <div class="chbox"></div>
         <span class="text13-2">Remember me</span>
         <button class="btlogin">login</button>
         <span class="text13-4">Forgot your password?</span>
@@ -153,9 +151,7 @@
         <span class="text15-1">Post a Comment</span>
         <img src="../styles/images/Pavel/Photo15_2.png" class="Photo15-2">
         <img src="../styles/images/Pavel/Photo15_1.png" class="Photo15-1">
-        <form action="#btn15-4">
-            <input type="submit" value="POST" class="btn15-4">
-        </form>
+        <button class="btn15-4">POST</button>
         <a href="https://www.facebook.com/" class="text15-3">Facebook</a>
         <a href="https://www.twitter.com/" class="text15-5">Twitter</a>
         <span class="text15-4">|</span>
