--- a/templates/index.html
+++ b/templates/index.html
@@ -122,6 +122,7 @@
         <span class="text13-1">Login for LEMON</span>
         <input type="text" class="login" placeholder="email or login">
         <input type="text" class="password" placeholder="password">
+        <input type="checkbox" class="chbox">
         <span class="text13-2">Remember me</span>
         <button class="btlogin">login</button>
         <span class="text13-4">Forgot your password?</span>
