--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,11 @@
         <img src="../styles/images/Ivan/salat.png" class="photo7-1" >
         <img src="../styles/images/Ivan/cocos.png" class="photo7-2" >
         <img src="../styles/images/Ivan/hands.png" class="photo7-3" >
-        <button class="viewbutton">VIEW MORE</button>
+        <a href="#viewbutton"><button class="viewbutton" id="viewbutton">VIEW MORE</button></a>
+
+        <span class="text7-5">by</span>
+        <span class="text7-6">Smuckersreg Toppings</span>
+        <span class="text7-7">Thanks for the recipe lorem ipsum bla bla bla Thanks for the recipe lore</span>
     </div>
 </div>
 <div class = "ARTYOM">
