--- a/templates/index.html
+++ b/templates/index.html
@@ -99,6 +99,18 @@
         <span class="text7-5">by</span>
         <span class="text7-6">Smuckersreg Toppings</span>
         <span class="text7-7">Thanks for the recipe lorem ipsum bla bla bla Thanks for the recipe lore</span>
+
+        <span class="text7-8">by</span>
+        <span class="text7-9">Smuckersreg Toppings</span>
+        <span class="text7-10">Thanks for the recipe lorem nks for the recipe</span>
+
+        <span class="text7-11">by</span>
+        <span class="text7-12">Smuckersreg Toppings</span>
+        <span class="text7-13">Thanks for the recipe lorem nks for the recipe</span>
+
+        <a href=""> <span class="icons7-1"> <i class="fa fa-print"></i></span></a>
+        <a href="https://www.gmail.com/"> <span class="icons7-2"> <i class="fa fa-regular fa-envelope"></i></span></a>
+
     </div>
 </div>
 <div class = "ARTYOM">
