--- a/styles/styles.css
+++ b/styles/styles.css
@@ -509,6 +509,94 @@ body {
     left: 85px;
     top:130px;
 }
+.text7-8{
+    font-family: 'Josefin Sans';
+    font-size: 12px;
+    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+    color: #000000;
+    position: absolute;
+    top:210px;
+    left: 85px;
+}
+.text7-9{
+    font-family: 'Josefin Sans';
+    font-size: 12px;
+    line-height: 1.2;
+    font-weight: 700;
+    letter-spacing: 0.025em;
+    color: #000000;
+    position: absolute;
+    left:100px;
+    top:210px;
+}
+.text7-10{
+    font-family: 'Josefin Sans';
+    font-size: 16px;
+    line-height: 16px;
+    font-weight: 600;
+    letter-spacing: 0.025em;
+    color: #000000;
+    position: absolute;
+    left: 85px;
+    top:230px;
+}
+.text7-11{
+    font-family: 'Josefin Sans';
+    font-size: 12px;
+    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+    color: #000000;
+    position: absolute;
+    top:300px;
+    left: 85px;
+}
+.text7-12{
+    font-family: 'Josefin Sans';
+    font-size: 12px;
+    line-height: 1.2;
+    font-weight: 700;
+    letter-spacing: 0.025em;
+    color: #000000;
+    position: absolute;
+    left:100px;
+    top:300px;
+}
+.text7-13{
+    font-family: 'Josefin Sans';
+    font-size: 16px;
+    line-height: 16px;
+    font-weight: 600;
+    letter-spacing: 0.025em;
+    color: #000000;
+    position: absolute;
+    left: 85px;
+    top:320px;
+}
+.icons7-1{
+    font-family: 'Font Awesome';
+    font-size: 16px;
+    line-height: 1.2;
+    font-weight: 400;
+    letter-spacing: 0.025em;
+    color: #555555;
+    position: absolute;
+    top: 35px;
+    left: 175px;
+}
+.icons7-2{
+    font-family: 'Font Awesome';
+    font-size: 16px;
+    line-height: 1.2;
+    font-weight: 400;
+    letter-spacing: 0.025em;
+    color: #555555;
+    position: absolute;
+    top: 35px;
+    left: 195px;
+}
 /* ======================ARTYOM===============*/
 .block11 {
     width: 290px;
