--- a/templates/index.html
+++ b/templates/index.html
@@ -110,7 +110,8 @@
 
         <a href=""> <span class="icons7-1"> <i class="fa fa-print"></i></span></a>
         <a href="https://www.gmail.com/"> <span class="icons7-2"> <i class="fa fa-regular fa-envelope"></i></span></a>
-
+        <a href="https://www.facebook.com/"> <span class="icons7-3"> <i class="fab fa-facebook-f"></i></span></a>
+        <a href="https://www.pinterest.com/"> <span class="icons7-4  "> <i class="fab fa-pinterest"></i></span></a>
     </div>
 </div>
 <div class = "ARTYOM">
