--- a/templates/index.html
+++ b/templates/index.html
@@ -71,11 +71,11 @@
         <img src="../styles/images/Ivan/line.png" class="line6-1">
         <span class="text6-2">Recipe by</span>
         <span class="text6-3">Smuckersreg Toppings</span>
-        <span class="text6-4"><i class="fa fa-clock"></i></span>
+        <span class="text6-4"><i class="fa fa-regular fa-clock"></i></span>
         <span class="text6-5">15mins</span>
-        <span class="text6-6"><i class="fa fa-thin fa-comment"></i></span>
+        <span class="text6-6"><i class="fa fa-regular fa-comment"></i></span>
         <span class="text6-7">12</span>
-        <span class="text6-8"><i class="fa fa-eye"></i></span>
+        <span class="text6-8"><i class="fa fa-regular fa-eye"></i></span>
         <span class="text6-9">37</span>
         <div class="line6-2"></div>
         <img src="../styles/images/Ivan/food.png" class="photo6-2">
