--- a/templates/index.html
+++ b/templates/index.html
@@ -113,6 +113,19 @@
         <a href="https://www.facebook.com/"> <span class="icons7-3"> <i class="fab fa-facebook-f"></i></span></a>
         <a href="https://www.pinterest.com/"> <span class="icons7-4  "> <i class="fab fa-pinterest"></i></span></a>
     </div>
+    <div class="block8">
+        <img class="photo8-1" src="../styles/images/Ivan/cofe.png">
+        <span class="text8-1">Popular Now</span>
+        <span class="text8-2">Vanilla Frozen Coffee</span>
+        <span class="text8-3">Mix coffee, sugar and creamer.Pour into blender and add ice cubes.Blend until smooth.</span>
+        <span class="text8-4"><i class="fa fa-regular fa-clock"></i></span>
+        <span class="text8-5">6mins</span>
+        <span class="text8-6"><i class="fa fa-regular fa-comment"></i></span>
+        <span class="text8-7">240</span>
+        <span class="text8-8"><i class="fa fa-regular fa-eye"></i></span>
+        <span class="text8-9">400</span>
+        <div class="line8-1"></div>
+    </div>
 </div>
 <div class = "ARTYOM">
     <div class="block11">
