--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@350&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,10 +42,9 @@
     <div class="block1">
         <img src="../styles/images/Dima/Photo1-1.png" class="Photo1-1">
         <img src="../styles/images/Dima/Logo.png" class="Logo1">
-        <span class="text1">Bananas Foster Ice Cream Cake</span>
-        <span class="text2">If you're looking for decadence, look no further — you've found the Holy Grail of desserts. Honestly, this cake makes us wonder why Bananas Foster hasn't always been served on top of ice cream cake.</span>
-        <span class="text3">GET IT RECIPE</span>
-        <div class="border1"></div>
+        <span class="text1-1">Bananas Foster Ice Cream Cake</span>
+        <span class="text1-2">If you're looking for decadence, look no further — you've found the Holy Grail of desserts. Honestly, this cake makes us wonder why Bananas Foster hasn't always been served on top of ice cream cake.</span>
+        <button class="btn1-1">GET IT RECIPE</button>
         <div class="dot1-1"></div>
         <div class="dot1-2"></div>
         <div class="dot1-3"></div>
@@ -60,7 +59,27 @@
         <span class="text2-2">Giant Ice Cream Sandwich</span>
         <img src="../styles/images/Dima/Photo2-3.png" class="Photo2-3">
         <span class="text2-3">Dark Chocolate Crunch Ice Cream Sandwich Cake</span>
+        <span class="text2-4"><i class="fa fa-regular fa-clock"></i></span>
+        <span class="text2-5">15mins</span>
+        <div class="line2-1"></div>
+        <span class="text2-6"><i class="fa fa-regular fa-comment"></i></span>
+        <span class="text2-7">12</span>
+        <span class="text2-8"><i class="fa fa-regular fa-eye"></i></span>
+        <span class="text2-9">37</span>
     </div>
+
+    <div class="block3">
+
+    </div>
+
+    <div class="block4">
+        <img src="../styles/images/Dima/Photo4-1.png" class="Photo4-1">
+    </div>
+
+    <div class="block5">
+
+    </div>
+
 
 </div>
 
@@ -72,11 +91,11 @@
         <span class="text6-2">Recipe by</span>
         <span class="text6-3">Smuckersreg Toppings</span>
         <span class="text6-4"><i class="fa fa-regular fa-clock"></i></span>
-        <span class="text6-5">15mins</span>
+        <span class="text6-5">35mins</span>
         <span class="text6-6"><i class="fa fa-regular fa-comment"></i></span>
-        <span class="text6-7">12</span>
+        <span class="text6-7">7</span>
         <span class="text6-8"><i class="fa fa-regular fa-eye"></i></span>
-        <span class="text6-9">37</span>
+        <span class="text6-9">14</span>
         <div class="line6-2"></div>
         <img src="../styles/images/Ivan/food.png" class="photo6-2">
         <div class="dot6-1"></div>
